--- a/examples/default/config.json
+++ b/examples/default/config.json
@@ -1,54 +1,71 @@
 {
-"version" : "0.0.4",
-"author" : "benwinter",
-"description" : "This is a default command line demo example, how i want a  json to be parsed into a callback tree with contitional execution, runtime callback optioons and exeption handling",
-"arguments": [
-{
-        "type" : "OPTION",
-        "flag" : "help",
-        "sflag" : "h",
-        "help" : "This is the default help message for the command line demo Execting the example binary, with ./mybinary --help this callback is executed, if custom code is given, the code can just be added by using the api for this software",
-        "shelp" : "Only the short Help Menu.Use '--help' for more info." ,
-        "method" : "exit"
+   "arguments": [
+      {
+         "datatype": "bool",
+         "flag": "interactive",
+         "help": "",
+         "muteable": false,
+         "run": "shell",
+         "shelp": "Interactive shell mode",
+         "type": "OPTION"
       },
       {
-        "type" : "OPTION",
-        "flag" : "interactive",
-        "help" : "Interactive shell mode",
-        "run" : "shell",
-        "datatype" : "bool"
+         "datatype": "bool",
+         "flag": "logging",
+         "help": "In case we want to create a history file in which we store all previously executed commands",
+         "muteable": false,
+         "run": "logging",
+         "type": "OPTION"
       },
       {
-        "type": "OPTION",
-        "flag": "_logging",
-        "help": "In case we want to create a history file in which we store all previously executed commands",
-        "run" :"logging",
-        "datatype" : "bool"
+         "datatype": "bool",
+         "flag": "history",
+         "help": "Use and allow a current history when in interactive mode. Commands need to be rerunable",
+         "muteable": false,
+         "run": "history",
+         "type": "OPTION"
+      },
+      {
+         "datatype": "bool",
+         "flag": "historyfile",
+         "help": "Use and allow a historyfile for multiple executions of the shell, Commands can be reentered etc..",
+         "muteable": false,
+         "run": "historyfile",
+         "type": "OPTION"
+      },
+      {
+         "arguments": [
+            {
+               "datatype": "file",
+               "required": true,
+               "type": "PARAM"
+            }
+         ],
+         "datatype": "file",
+         "flag": "config",
+         "help": "Specifies a configuration file, from which commands will be parsed, can only be executed on booting the application",
+         "muteable": false,
+         "run": "configFile, bootonly",
+         "type": "OPTION"
+      },
+      {
+         "arguments": [
+            {
+               "datatype": "int[3000:60000]",
+               "required": true,
+               "type": "PARAM"
+            }
+         ],
+         "flag": "port",
+         "help": "The port that will be used for the http server",
+         "run": "self",
+         "sflag": "p",
+         "type": "OPTION"
       }
-    ,{
-        "type": "OPTION",
-        "flag": "history",
-        "help" : "Use and allow a current history when in interactive mode. Commands need to be rerunable",
-        "run" : "history",
-        "datatype" : "bool"
-      },
-      {
-        "type" : "OPTION",
-        "flag" : "historyfile",
-        "help" : "Use and allow a historyfile for multiple executions of the shell, Commands can be reentered etc..",
-        "run" : "historyfile",
-        "datatype" : "bool"
-      },
-      {
-        "type" : "OPTION",
-        "flag" : "port",
-        "sflag" : "p",
-        "help" : "The port that will be used for the http server",
-        "run" : "self",
-        "arguments" : [{
-          "type": "PARAM",
-          "datatype" : "int[3000:60000]",
-          "required" : true,
-        }]
-      }
-  ]}
+   ],
+   "author": "ben",
+   "description": "The description of the application",
+   "executeable": "ashash,
+   "man": "The Man Page for this application",
+   "version": "0.0.5"
+}
