--- a/examples/empty/2023_2_21_21_25_errsave_config.json
+++ b/examples/empty/2023_2_21_21_25_errsave_config.json
@@ -1,5 +1,15 @@
 {
+    "version": "0.0.5",
     "arguments": [
+       {
+          "flag": "help",
+          "help": "This is the default help message for the command line demo Execting the example binary, with ./mybinary --help this callback is executed. Can be overwritten",
+          "muteable": true,
+          "run": "exit",
+          "sflag": "h",
+          "shelp": "Only the short Help Menu.Use '--help' for more info.",
+          "type": "OPTION"
+       },
        {
           "datatype": "bool",
           "flag": "interactive",
@@ -26,20 +36,18 @@
           "type": "OPTION"
        },
        {
-          "flag": "help",
-          "help": "This is the default help message for the command line demo Execting the example binary, with ./mybinary --help this callback is executed. Can be overwritten",
-          "muteable": true,
-          "run": "exit",
-          "sflag": "h",
-          "shelp": "Only the short Help Menu.Use '--help' for more info.",
-          "type": "OPTION"
-       },
-       {
           "datatype": "bool",
           "flag": "historyfile",
           "help": "Use and allow a historyfile for multiple executions of the shell, Commands can be reentered etc..",
           "muteable": false,
           "run": "historyfile",
+          "type": "OPTION"
+       },
+       {
+          "flag": "verbose",
+          "help": "Run the shell or the entire program in verbose mode. If a number is provided, different verbosities will be used. Can be overwritten.",
+          "muteable": true,
+          "run": "verbose",
           "type": "OPTION"
        },
        {
@@ -58,24 +66,17 @@
           "type": "OPTION"
        },
        {
-          "flag": "verbose",
-          "help": "Run the shell or the entire program in verbose mode. If a number is provided, different verbosities will be used. Can be overwritten.",
-          "muteable": true,
-          "run": "verbose",
-          "type": "OPTION"
-       },
-       {
-          "arguments": [
+          "flag": "todo",
+          "type": "OPTION",
+          "arguments" : [
              {
-                "flag": "port",
-                "type": "OPTION"
+                "type" : "PARAM"
              }
-          ],
-          "flag": "port",
-          "type": "OPTION"
+          ]
        }
     ],
-    "author": "benwinter",
-    "description": "This is a default command line demo example, how i want a  json to be parsed into a callback tree with contitional execution, runtime callback optioons and exeption handling",
-    "version": "0.0.4"
+    "author": "ben",
+    "description": "The description of the application",
+    "executeable": "",
+    "man": "The Man Page for this application"
  }
