--- a/examples/microservice/commandlineconfig.json
+++ b/examples/microservice/commandlineconfig.json
@@ -1,6 +1,12 @@
 {
     "arguments": [
        {
+          "arguments": [
+             {
+                "datatype": "bool",
+                "type": "PARAM"
+             }
+          ],
           "datatype": "bool",
           "flag": "interactive",
           "help": "",
@@ -10,6 +16,12 @@
           "type": "OPTION"
        },
        {
+          "arguments": [
+             {
+                "datatype": "bool",
+                "type": "PARAM"
+             }
+          ],
           "datatype": "bool",
           "flag": "logging",
           "help": "In case we want to create a history file in which we store all previously executed commands",
@@ -18,6 +30,12 @@
           "type": "OPTION"
        },
        {
+          "arguments": [
+             {
+                "datatype": "bool",
+                "type": "PARAM"
+             }
+          ],
           "datatype": "bool",
           "flag": "history",
           "help": "Use and allow a current history when in interactive mode. Commands need to be rerunable",
@@ -35,6 +53,12 @@
           "type": "OPTION"
        },
        {
+          "arguments": [
+             {
+                "datatype": "bool",
+                "type": "PARAM"
+             }
+          ],
           "datatype": "bool",
           "flag": "historyfile",
           "help": "Use and allow a historyfile for multiple executions of the shell, Commands can be reentered etc..",
@@ -67,6 +91,13 @@
        {
           "arguments": [
              {
+                "arguments": [
+                   {
+                      "datatype": "number",
+                      "type": "PARAM"
+                   }
+                ],
+                "datatype": "number",
                 "flag": "port",
                 "type": "OPTION"
              }
