--- a/examples/bin_run_example/config.json
+++ b/examples/bin_run_example/config.json
@@ -67,7 +67,8 @@
        {
           "flag": "cool",
           "run": "cool",
-          "type": "COMMAND"
+          "type": "COMMAND",
+
        }
     ],
     "author": "ben",
