not required todo, changed run obligatory addition, when running the command

--- a/examples/empty/config.json
+++ b/examples/empty/config.json
@@ -132,16 +132,16 @@
           "type": "COMMAND"
        },
        {
-          "datatype": "number",
-          "flag": "address",
-          "type": "OPTION",
           "arguments": [
              {
                 "datatype": "number",
                 "required": true,
                 "type": "PARAM"
              }
-          ]
+          ],
+          "datatype": "number",
+          "flag": "address",
+          "type": "OPTION"
        }
     ],
     "author": "ben",
