--- a/examples/bin_run_example/2023_3_16_23_31_errsave_config.json
+++ b/examples/bin_run_example/2023_3_16_23_31_errsave_config.json
@@ -10,12 +10,6 @@
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "datatype": "bool",
-                "type": "PARAM"
-             }
-          ],
           "datatype": "bool",
           "flag": "interactive",
           "help": "",
@@ -25,12 +19,6 @@
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "datatype": "bool",
-                "type": "PARAM"
-             }
-          ],
           "datatype": "bool",
           "flag": "logging",
           "help": "In case we want to create a history file in which we store all previously executed commands",
@@ -39,12 +27,6 @@
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "datatype": "bool",
-                "type": "PARAM"
-             }
-          ],
           "datatype": "bool",
           "flag": "history",
           "help": "Use and allow a current history when in interactive mode. Commands need to be rerunable",
@@ -53,12 +35,6 @@
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "datatype": "bool",
-                "type": "PARAM"
-             }
-          ],
           "datatype": "bool",
           "flag": "historyfile",
           "help": "Use and allow a historyfile for multiple executions of the shell, Commands can be reentered etc..",
@@ -67,13 +43,6 @@
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "datatype": "bool",
-                "type": "PARAM"
-             }
-          ],
-          "datatype": "bool",
           "flag": "verbose",
           "help": "Run the shell or the entire program in verbose mode. If a number is provided, different verbosities will be used. Can be overwritten.",
           "muteable": true,
@@ -92,62 +61,19 @@
           "flag": "config",
           "help": "Specifies a configuration file, from which commands will be parsed, can only be executed on booting the application",
           "muteable": false,
-          "run": "config, bootonly",
+          "run": "configFile, bootonly",
           "type": "OPTION"
        },
        {
-          "arguments": [
-             {
-                "arguments": [
-                   {
-                      "arguments": [
-                         {
-                            "datatype": "number",
-                            "required": false,
-                            "type": "PARAM"
-                         }
-                      ],
-                      "datatype": "number",
-                      "required": false,
-                      "type": "PARAM"
-                   }
-                ],
-                "datatype": "number",
-                "required": true,
-                "type": "PARAM"
-             }
-          ],
-          "datatype": "number",
-          "flag": "port",
-          "type": "OPTION | WILDCARD"
-       },
-       {
-          "flag": "hello",
-          "run": "meinefile",
+          "flag": "cool",
+          "run": "cool",
           "type": "COMMAND"
-       },
-       {
-          "flag": "juuhuu",
-          "run": "ey",
-          "type": "COMMAND"
-       },
-       {
-          "arguments": [
-             {
-                "datatype": "number",
-                "required": true,
-                "type": "PARAM"
-             }
-          ],
-          "datatype": "number",
-          "flag": "address",
-          "type": "OPTION"
+
        }
     ],
     "author": "ben",
     "description": "The description of the application",
     "executeable": "",
     "man": "The Man Page for this application",
-    "title": "MyCustomTitle",
     "version": "0.0.1"
  }
