commands working demos

--- a/examples/title/config.json
+++ b/examples/title/config.json
@@ -98,6 +98,13 @@
        {
           "arguments": [
              {
+                "arguments": [
+                   {
+                      "datatype": "number",
+                      "required": false,
+                      "type": "PARAM"
+                   }
+                ],
                 "datatype": "number",
                 "required": true,
                 "type": "PARAM"
