help impl, parsing fix

--- a/examples/title/config.json
+++ b/examples/title/config.json
@@ -112,6 +112,6 @@
     "executeable": "",
     "man": "The Man Page for this application",
     "styleTitle": true,
-    "title": "COOL",
+    "title": "POLINARSCH",
     "version": "0.0.1"
  }
